# range

./: .gitignore  .vnet  CCDC HL Range - Users.csv  CHANGELOG.md  CLAUDE.md  Create-RangeUsers.ps1  MIGRATION.md  README.md  ccdcrange.service  cleanup_pve_user.py  data.csv  dev.py  infra.toml  pyproject.toml  range_cli.py  range_dublin.csv  range_linux.csv  range_users.csv  rangemgr.py  requirements.txt  secrets.toml.example  tui.py  vmids.toml  web.py
.github/: README.md  copilot-instructions.md
.github/workflows/: codequality.yml  lint.yml
docs/: username-matching-fix.md
scripts/: Create-RangeUsers.ps1  nuke_by_name.py  nuke_gw.py  nuke_vnet.py  pre-prep-vnet.py  purge_pve_users.py  set_power_by_name.py  setup_range.py
static/: spooky.js  style.css
templates/: admin.html  clone.html  page.html  register.html  register_success.html
tests/: test_network_manager.py
