[project]
name = "proxmox-range"
version = "1.0.0"
description = "Python interface to Proxmox range for competitive cyber training"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "champcybersec", email = "range@champcybersec.org" }
]
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.0",
    "proxmoxer>=2.2.0",
    "requests>=2.31.0",
    "tomli>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]